--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
@@ -32,6 +33,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
