--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
