--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
     "movie-trailer": "^3.0.0",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-animated-heart": "^0.0.7",
     "react-cropper": "^2.3.3",
