--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
+    "prettier": "^3.2.5",
     "socket.io": "^4.6.1",
     "typescript": "^5.0.4"
   }
