Lazy loaded images

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "npx eslint ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
